fix(menu): remove overlapping tabs offset

--- a/css/menu-discovery.css
+++ b/css/menu-discovery.css
@@ -148,7 +148,6 @@
 }
 
 .menu-catalog-page .menu-tabs-container {
-  top: 74px;
   z-index: 20;
 }
 
